// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`role should render permissions table 1`] = `
Array [
  <Provider
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    columns={
      Array [
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "column-0",
          "props": Object {
            "data-key": 0,
            "data-label": "",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Application",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "application",
          "props": Object {
            "data-key": 1,
            "data-label": "Application",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Resource type",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "resource-type",
          "props": Object {
            "data-key": 2,
            "data-label": "Resource type",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Operation",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "operation",
          "props": Object {
            "data-key": 3,
            "data-label": "Operation",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "info": Object {
              "ariaLabel": "Resource definitions only apply to Cost Management permissions",
              "popover": "Resource definitions only apply to Cost Management permissions",
              "popoverProps": Object {
                "maxWidth": "19rem",
                "minWidth": "19rem",
              },
            },
            "label": "Resource definitions",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "resource-definitions",
          "props": Object {
            "data-key": 4,
            "data-label": "Resource definitions",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Last commit",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "last-commit",
          "props": Object {
            "data-key": 5,
            "data-label": "Last commit",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "column-6",
          "props": Object {
            "data-key": 6,
            "data-label": "",
          },
        },
      ]
    }
    data-ouia-component-id="role-permissions-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    renderers={
      Object {
        "body": Object {
          "cell": [Function],
          "row": [Function],
          "wrapper": [Function],
        },
        "header": Object {
          "cell": [Function],
        },
      }
    }
    role="grid"
  />,
  <table
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    data-ouia-component-id="role-permissions-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    role="grid"
  >
    <TableHeader />
    <Component />
  </table>,
]
`;

exports[`role should render second page of table 1`] = `
Array [
  <Provider
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    columns={
      Array [
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "column-0",
          "props": Object {
            "data-key": 0,
            "data-label": "",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Application",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "application",
          "props": Object {
            "data-key": 1,
            "data-label": "Application",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Resource type",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "resource-type",
          "props": Object {
            "data-key": 2,
            "data-label": "Resource type",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Operation",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "operation",
          "props": Object {
            "data-key": 3,
            "data-label": "Operation",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Last commit",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "last-commit",
          "props": Object {
            "data-key": 4,
            "data-label": "Last commit",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": [Function],
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 1,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": [Function],
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "selectVariant": "checkbox",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "column-5",
          "props": Object {
            "data-key": 5,
            "data-label": "",
          },
        },
      ]
    }
    data-ouia-component-id="role-permissions-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    renderers={
      Object {
        "body": Object {
          "cell": [Function],
          "row": [Function],
          "wrapper": [Function],
        },
        "header": Object {
          "cell": [Function],
        },
      }
    }
    role="grid"
  />,
  <table
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    data-ouia-component-id="role-permissions-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    role="grid"
  >
    <TableHeader />
    <Component />
  </table>,
]
`;

exports[`role should render top toolbar 1`] = `
<TopToolbar
  breadcrumbs={
    Array [
      Object {
        "title": "Roles",
        "to": "/roles",
      },
      Object {
        "isActive": true,
        "title": "name",
      },
    ]
  }
  paddingBottom={false}
/>
`;
